--- a/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 
-<section class="bg-light text-dark m-5 p-5">
+<section class="bg-light text-dark m-5 p-5 story">
     <div class="container">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
@@ -71,8 +71,10 @@
                                 <h4 class="de-timeline-year">Late 1800s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Beginnings of Migration</div>
+                                    <hr>
+
                                     <p class="fs-6">Japanese began to emigrate to Australia, working in pearling in northern Australia and other industries.</p>
                                 </div>
                             </div>
@@ -90,8 +92,10 @@
                                 <h4 class="de-timeline-year">1901</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Immigration Restriction Act</div>
+                                    <hr>
+
                                     <p class="fs-6">Passage of the act restricted non-European immigrants, including Japanese; however, some were exempted from the dictation test by 1904.</p>
                                 </div>
                             </div>
@@ -115,8 +119,10 @@
                                 <h4 class="de-timeline-year">1941-1947</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">WW II and Internment</div>
+                                    <hr>
+
                                     <p class="fs-6">During the war against Japan, the Japanese population in Victoria was interned and mostly deported afterward.</p>
                                 </div>
                             </div>
@@ -134,8 +140,9 @@
                                 <h4 class="de-timeline-year">1973-2016</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Growth and Cultural Integration</div>
+                                    <hr>
                                     <p class="fs-6">After the end of the White Australia policy, the Japan-born population in Victoria grew, culminating in a community of 8,515 by 2016.</p>
                                 </div>
                             </div>
