--- a/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 
-<section class="bg-light m-5 p-5 text-dark">
+<section class="bg-light m-5 p-5 text-dark story">
     <div class="container">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
@@ -62,8 +62,10 @@
                                 <h4 class="de-timeline-year">Late 1960s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Foundations of Korean Presence in Victoria</div>
+                                    <hr>
+
                                     <p class="fs-6">Initial Korean migrants arrived in Victoria, marking the beginning of the community.</p>
                                 </div>
                             </div>
@@ -81,8 +83,10 @@
                                 <h4 class="de-timeline-year">1971</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Establishment Amidst Global Movements</div>
+                                    <hr>
+
                                     <p class="fs-6">The Korean community numbered 72, comprised of individuals from diverse backgrounds and countries.</p>
                                 </div>
                             </div>
@@ -106,8 +110,10 @@
                                 <h4 class="de-timeline-year">1975</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">A New Wave from Vietnam</div>
+                                    <hr>
+
                                     <p class="fs-6">Following the fall of South Vietnam, Koreans working in military contracts migrated to Australia, enriching the community.</p>
                                 </div>
                             </div>
@@ -125,8 +131,10 @@
                                 <h4 class="de-timeline-year">1981-1991</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">A Decade of Growth and Recognition</div>
+                                    <hr>
+
                                     <p class="fs-6">The population grew from 389 in 1981 to 1,544 in 1991, marking significant community establishment in Victoria.</p>
                                 </div>
                             </div>
@@ -150,8 +158,9 @@
                                 <h4 class="de-timeline-year">2017</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Contemporary Vibrance</div>
+                                    <hr>
                                     <p class="fs-6">With 14,798 Koreans calling Victoria home, the community is now a vibrant part of the state's multicultural landscape, contributing professionally and culturally.</p>
                                 </div>
                             </div>
