--- a/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
@@ -5,7 +5,7 @@
 
 
 
-<section class="bg-light text-dark m-5 p-5">
+<section class="bg-light text-dark m-5 p-5 story">
     <div class="container">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
@@ -62,8 +62,9 @@
                                 <h4 class="de-timeline-year">Early 20th Century</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">The Foundation Years</div>
+                                    <hr>
                                     <p class="fs-6">The Filipino community in Victoria starts with just 16 people, facing restrictions under Australian policies.</p>
                                 </div>
                             </div>
@@ -81,8 +82,10 @@
                                 <h4 class="de-timeline-year">1950s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">New Beginnings Under the Colombo Plan</div>
+                                    <hr>
+
                                     <p class="fs-6">Relaxation of the White Australia Policy and the Colombo Plan brings Filipino students and skilled professionals to Victoria.</p>
                                 </div>
                             </div>
@@ -106,8 +109,10 @@
                                 <h4 class="de-timeline-year">1970s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Significant Increase in Immigration</div>
+                                    <hr>
+
                                     <p class="fs-6">The Filipino population grows from 467 in 1971 to 3,455 by 1981, driven by the end of restrictive policies and political unrest in the Philippines.</p>
                                 </div>
                             </div>
@@ -125,8 +130,10 @@
                                 <h4 class="de-timeline-year">1981-2016</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Remarkable Community Growth</div>
+                                    <hr>
+
                                     <p class="fs-6">One of the most dramatic increases in Victoria's demographics, with the Filipino population reaching 51,287, supported by the Family Reunion Program.</p>
                                 </div>
                             </div>
