--- a/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 
-<section class="bg-light m-5 p-5 text-dark">
+<section class="bg-light m-5 p-5 text-dark story">
     <div class="container">
         <div class="row gx-5 align-items-center">
             <div class="col-lg-6">
@@ -57,8 +57,10 @@
                                 <h4 class="de-timeline-year">Pre-1975</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">War and Early Migration</div>
+                                    <hr>
+
                                     <p class="fs-6">The initial Vietnamese presence in Victoria, marked by war orphans, Vietnamese wives of Australian servicemen, and students.</p>
                                 </div>
                             </div>
@@ -76,8 +78,10 @@
                                 <h4 class="de-timeline-year">1976</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">First Census Count</div>
+                                    <hr>
+
                                     <p class="fs-6">Vietnamese-born Victorians officially counted, numbering 382.</p>
                                 </div>
                             </div>
@@ -101,8 +105,10 @@
                                 <h4 class="de-timeline-year">Post-1975</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Significant Refugee Arrivals</div>
+                                    <hr>
+
                                     <p class="fs-6">Significant refugee arrivals following the end of the Vietnam War, with many fleeing political changes and hardship.</p>
                                 </div>
                             </div>
@@ -120,8 +126,10 @@
                                 <h4 class="de-timeline-year">1981</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Rapid Growth</div>
+                                    <hr>
+
                                     <p class="fs-6">The Vietnamese-born population in Victoria exceeds 12,000, with many finding employment in trade and production.</p>
                                 </div>
                             </div>
@@ -145,8 +153,10 @@
                                 <h4 class="de-timeline-year">1982</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Family Reunion Focus</div>
+                                    <hr>
+
                                     <p class="fs-6">Australia and Vietnam establish an orderly migration program, leading to further community growth.</p>
                                 </div>
                             </div>
@@ -164,8 +174,9 @@
                                 <h4 class="de-timeline-year">1982-Now</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Contemporary Achievements</div>
+                                    <hr>
                                     <p class="fs-6">Today, over 68,000 Vietnam-born individuals contribute to Victorian society through diverse professions, businesses, and cultural activities.</p>
                                 </div>
                             </div>
