--- a/TP03MainProj/Views/Education/Index.cshtml
+++ b/TP03MainProj/Views/Education/Index.cshtml
@@ -12,7 +12,6 @@
         <div class="img3"></div>
         <div class="img4"></div>
         <div class="img5"></div>
-
     </div>
     <div class="row">
         <div class="col-12 text-center" id="welcome-education-text">
@@ -28,7 +27,7 @@
             </div>
             <div class="row flex-grow-1 align-items-center">
                 <div class="container text-center">
-                    <h2 class="display-5 fw-bold mb-5">Embark on a Journey of Cultural Discovery</h2>
+                    <h2 class="display-5 fw-bold mt-3 mb-2">Embark on a Journey of Cultural Discovery</h2>
                     <nav class="nav justify-content-center align-items-center">
                         <a class="nav-link text-dark" href="#">Home</a>
                         <span class="text-dark mx-2 d-flex fw-bold">></span>
@@ -49,20 +48,13 @@
             </div>
         </div>
     </div>
-
-
 </section>
-
 
 @section Styles {
     @Styles.Render("~/bundles/css")
 }
 
 @section Scripts{
-
-
-
-
     <script>
         $(document).ready(function () {
             $('#explore-button').on('click', function () {
