--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 
     <link href="@Url.Content("~/Content/Customer/fonts/fontawesome4/css/font-awesome.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/Customer/fonts/fontawesome6/css/fontawesome.css")" rel="stylesheet" />
@@ -81,21 +80,21 @@
                 </div>
 
                 <div class="col-2">
-                    <h5 class="text-white">Culture Melbourne</h5>
+                    <h5 class="text-white fw-bold">Culture Melbourne</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item text-white mb-2"><a href="@Url.Action("Index", "Home")" class="nav-link text-white p-0 ">Home</a></li>
-                        <li class="nav-item text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link text-white p-0 ">Education</a></li>
-                        <li class="nav-item text-white mb-2"><a href="#cultural-events" class="nav-link p-0 text-white ">Culture Events</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Home")" class=" nav-link text-white p-0 ">Home</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class=" nav-link  text-white p-0 ">Education</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="#cultural-events" class="nav-link  p-0 text-white ">Culture Events</a></li>
                     </ul>
                 </div>
 
                 <div class="col-2">
-                    <h5 class="text-white">Our Services</h5>
+                    <h5 class="text-white fw-bold">Our Services</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item text-white mb-2">East Asian Melodies</li>
-                        <li class="nav-item text-white mb-2">Discover East Asia</li>
-                        <li class="nav-item text-white mb-2">Voices of East Asia</li>
-                        <li class="nav-item text-white mb-2">Cultural Insights</li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">East Asian Melodies</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Discover East Asia</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Voices of East Asia</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Cultural Insights</a></li>
                     </ul>
                 </div>
             </div>
@@ -105,6 +104,7 @@
             </div>
         </footer>
     </div>
+
 
 
 
