--- a/TP03MainProj/Views/Education/CountryStory/China.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/China.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <!-- overview -->
-<section class="bg-light m-5 p-5 text-dark">
+<section class="bg-light m-5 p-5 text-dark story">
     <div class="container">
         <div class="row gx-5 align-items-center">
 
@@ -71,8 +71,9 @@
                                 <h4 class="de-timeline-year">1850</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Gold Rush and Early Settlement</div>
+                                    <hr>
                                     <p class="fs-6">Arrival of the first Chinese settlers during the gold rush. Many were contracted to agents and faced years of repayments while supporting their families back in China.</p>
                                 </div>
 
@@ -92,8 +93,9 @@
                             </div>
 
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Gold Rush and Early Settlement</div>
+                                    <hr>
                                     <p class="fs-6">Arrival of the first Chinese settlers during the gold rush. Many were contracted to agents and faced years of repayments while supporting their families back in China.</p>
                                 </div>
 
@@ -118,8 +120,9 @@
                                 <h4 class="de-timeline-year">Late 1800s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Economic Diversification and Community Contributions</div>
+                                    <hr>
                                     <p class="fs-6">As gold resources dwindled, many Chinese settlers turned to market gardening, small businesses, and various trades, such as laundry operations and medicine, contributing significantly to local economies.</p>
                                 </div>
                             </div>
@@ -137,8 +140,10 @@
                                 <h4 class="de-timeline-year">1901</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">The Impact of the White Australia Policy</div>
+                                    <hr>
+
                                     <p class="fs-6">The Immigration Restriction Act, part of the White Australia Policy, significantly limited Chinese immigration using methods like a dictation test. This era saw stringent residency conditions for Chinese immigrants.</p>
                                 </div>
 
@@ -163,12 +168,14 @@
                                 <h4 class="de-timeline-year">1970s</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Fighting Discrimination and Changing Policies</div>
+                                    <hr>
+
                                     <p class="fs-6">The discriminatory immigration policies began to be dismantled, leading to an increase in Chinese immigration and stronger trade links between Victoria and China.</p>
 
                                 </div>
-                                </div>
+                            </div>
                             </div>
                         <div class="meta-dot">
                         </div>
@@ -183,8 +190,10 @@
                                 <h4 class="de-timeline-year">1986-1991</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Post-Tiananmen Immigration Surge</div>
+                                    <hr>
+
                                     <p class="fs-6">The China-born population in Victoria more than doubled, largely due to Chinese students seeking citizenship and asylum following the Tiananmen Square protests.</p>
 
                                 </div>
@@ -209,8 +218,10 @@
                                 <h4 class="de-timeline-year">2016-Now</h4>
                             </div>
                             <div class="content-right">
-                                <div class="mt-5 fs-4">
+                                <div class="mt-5 fs-4 shadow p-2 bg-body rounded-3 p-3">
                                     <div class="de-timeline-title fw-bold">Contemporary Growth and Contributions</div>
+                                    <hr>
+
                                     <p class="fs-6">The census recorded 160,652 China-born individuals in Victoria. The recent years have seen a rise in professional migrants from China, including scholars and business investors, alongside a large number of students.</p>
 
                                 </div>
