--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -66,7 +66,7 @@
 <!-- Side Navigation -->
 @*choose part*@
 <section class="mt-4 bg-white container-fluid">
-    <div class="container m-5 p-5">
+    <div class="container m-1 p-1 mt-1 pt-1">
         <div class="row flex-grow-1">
             <!-- Adjust the column width and offset as needed to fit the design -->
             <div class="col-lg-10 offset-lg-1">
@@ -78,7 +78,7 @@
                         <span class="text-dark fs-5 mx-2">></span>
                     </li>
                     <li class="nav-item">
-                        <span class="nav-link fs-5 text-dark">Education Center</span>
+                        <a class="nav-link text-dark fs-5" href="@Url.Action("Index", "Education")">Education Center</a>
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <span class="text-dark fs-5 mx-2">></span>
@@ -148,7 +148,7 @@
                                     <div id="@($"{countryId}-religion-chart")" style="display: none;" class="chart-container"></div>
                                 </div>
                             </div>
-   
+
                         </div>
                     </div>
 
@@ -165,6 +165,7 @@
 
 
 @section Scripts{
+
     @Scripts.Render("~/bundles/educationJS")
 
     <!-- For the Stream Chart -->
@@ -182,13 +183,16 @@
 
 
 @section Styles{
+    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 
     @Styles.Render("~/Content/edu")
 
     <style>
+
         .fs-responsive {
             font-size: calc(0.9rem + 0.5vw); /* Smaller base size with slight scaling based on viewport width */
         }
+
         .chart-container {
             width: 100%;
             min-height: 500px;
@@ -243,8 +247,11 @@
             object-fit: cover;
             width: 100%;
             height: auto;
+            border-radius: 15px;
         }
-
+        .story img {
+            border-radius: 18px;
+        }
         .img-resize {
             max-width: 75%;
             max-height: auto;
