--- a/TP03MainProj/Views/Events/_EventsList.cshtml
+++ b/TP03MainProj/Views/Events/_EventsList.cshtml
@@ -1,27 +1,24 @@
 ﻿﻿@model IEnumerable<TP03MainProj.Models.Events>
-
 <div class="container mt-3">
     <div class="row">
         <!-- Events Column -->
         <div class="col-12">
             @if (Model.Any())
             {
-                <h3 class="text-decoration-underline">Events for the date: @ViewBag.FormattedDate</h3>
+                <h3 class="my-4 p-3 bg-light rounded">Events for the date: <span class="text-decoration-underline">@ViewBag.FormattedDate</span></h3>
                 foreach (var evt in Model)
                 {
-                    <div class="row mb-4 shadow-sm  p-3 bg-body rounded">
+                    <div class="row mb-4 shadow-sm p-3 bg-body rounded">
                         <!-- Image Area -->
                         <div class="col-md-4 d-flex justify-content-center align-items-center">
-                            @*<img src="@evt.ImageUrl" alt="@evt.Title" class="img-fluid" ">*@
-                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" alt="" style="max-height: 250px;" class="img-fluid w-100 rounded h-auto">
-
+                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" alt="@evt.Title" style="max-height: 250px;" class="img-fluid w-100 rounded h-auto">
                         </div>
                         <!-- Event Details -->
                         <div class="col-md-8">
-                            <div class="event-detail p-3 ">
+                            <div class="event-detail p-3">
                                 <h4>@evt.Title</h4>
                                 <p>@evt.Description</p>
-                                <a class="btn btn-primary text-white h-25 w-25" href="@evt.Url" target="_blank">More Info</a>
+                                <a class="btn btn-primary text-white" href="@evt.Url" target="_blank">More Info</a>
                             </div>
                         </div>
                     </div>
@@ -29,14 +26,9 @@
             }
             else
             {
-                <h3 class="text-decoration-underline">Events for the date: @ViewBag.FormattedDate</h3>
+                <h3 class="my-4 p-3 bg-light rounded">Events for the date: <span class="text-decoration-underline">@ViewBag.FormattedDate</span></h3>
                 <p><strong>Sorry, no events found for this date.</strong></p>
             }
         </div>
     </div>
 </div>
-
-
-
-
-
